[package]
name = "vess"
version = "0.1.0"
authors = ["Justin Parado <justin.parado@dice205.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-identity = "0.2.1"
actix-service = "1.0.5"
actix-cors = "0.2.0"
actix-session = "0.3.0"
actix-http = "1.0.1"

dotenv = "0.15.0"
diesel = {version="1.4.4", features=["postgres", "r2d2"]}
serde = "1.0.106"
serde_json = "1.0.51"
listenfd = "0.3.3"
dotenv_codegen = "0.15.0"
rust-argon2 = "0.8"
futures = "0.3"
log = "0.4.0"
env_logger = "0.7.1"
derive_more = "0.99.0"
frank_jwt = "3.1.2"

[profile.dev]
opt-level=0

[profile.release]
opt-level=3
